--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-ECHO is on.
+<html>
+    <head>
+        <title>Laliga-Penalty-shootout</title>
+    </head>
+    <body>
+        <div class=container>
+            <div class="1row">
+                <div class="1col">
+                    <img src="images/Real_Madrid_CF.svg.png" width="100" height="100" alt="RealMadrid">
+                    <ol>0</ol>
+                    <ol>1</ol>
+                    <ol>1</ol>
+                    <ol>0</ol>
+                    <ol>1</ol> 
+                </div>
+                <div class="2col">
+                    <span>3</span>
+                    <span>-</span> 
+                    <span>3</span>  
+                </div>
+                <div class="3col">
+                    <img src="images/S_D_Huesca.svg.png" width="100" height="100" alt="S_D_Huesca">
+                    <ol>1</ol>
+                    <ol>1</ol>
+                    <ol>1</ol>
+                    <ol>0</ol>
+                    <ol>0</ol>   
+                </div>
+            <div class = "2row">
+                <button >TryAgain</button>
+            </div>
+    </body>
+</html>
+
